<resources>
    <string name="app_name">来到商家版</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="status_text_empty">当前暂无记录</string>
    <string name="retry">重试</string>
    <string name="loading">加载中</string>
    <string name="not_connect">当前网络状况不佳</string>
    <string name="main_home">服务</string>
    <string name="main_help">客服</string>
    <string name="main_order">订单</string>
    <string name="main_mine">我的</string>
    <string name="main_circle">圈子</string>
    <string name="main_wallet">钱包</string>
    <string name="main_deal_order">接单</string>
    <string name="all">全部</string>
    <string name="wait_pay">待支付</string>
    <string name="wait_comment">待评论</string>
    <string name="complete">已完成</string>
    <string name="login">登录</string>
    <string name="edit_verify">请输入验证码</string>
    <string name="edit_phone">请输入手机号</string>
    <string name="edit_account">请输入账号</string>
    <string name="feedback">反馈</string>
    <string name="about_us">关于我们</string>
    <string name="check_update">检查更新</string>
    <string name="exit_login">退出登录</string>
    <string name="setting">设置</string>
    <string name="message">消息</string>
    <string name="store">店铺</string>
    <string name="store_info">店铺资料</string>
    <string name="prompt">提示</string>
    <string name="send_captcha">发送验证码</string>
    <string name="input_phone">输入手机号</string>
    <string name="next">下一步</string>
    <string name="input_captcha">输入手机验证码</string>
    <string name="re_send_captcha">重新发送验证码</string>
    <string name="completing_info">完善账户信息</string>
    <string name="login_now">立即登录</string>
    <string name="edit_psw">请输入密码</string>
    <string name="show_psw">显示密码</string>
    <string name="new_regist">新用户注册</string>
    <string name="set_nickname">设置账户昵称</string>
    <string name="talk_later">以后再说</string>
    <string name="input_pwd">设置登录密码(不少于6位)</string>
    <string name="input_pwd_again">再次输入密码</string>
    <string name="reset_pwd">设置新密码</string>
    <string name="not_open">该功能正在开发！</string>
    <string name="reset_pwd_success">设置密码成功</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="wx">微信</string>
    <string name="pyq">朋友圈</string>
    <string name="order_detail">订单明细</string>
    <string name="order_status">订单状态</string>
    <string name="serve_fee">服务费用</string>
    <string name="door_serve_fee">上门费用</string>
    <string name="total">合计</string>
    <string name="extra_fee">附加费用</string>
    <string name="contact_store">联系客服</string>
    <string name="go_pay">去支付</string>
    <string name="update_success">更新信息成功</string>
    <string name="nickname_not_right">昵称格式不正确</string>
    <string name="please_input_right_email">请输入正确的邮箱</string>
    <string name="photo_choose_fail">图片选择失败</string>
    <string name="contract_empty">您还没有相关合约</string>
    <string name="order_empty">您还没有相关订单</string>
    <string name="not_all">请完善信息</string>
    <string name="wallet_empty">您还没有相关收入</string>
    <string name="fund_empty">暂无相关基金</string>
    <string name="login_success">登录成功</string>
    <string name="commit_success">提交成功！</string>
    <string name="contract_detail">智能合约详情</string>
    <string name="company_info">企业信息</string>
    <string name="fund_intro">基金介绍</string>
    <string name="no_network">当前无网络连接，请稍后再试</string>

    <string name="create_success">创建账户成功</string>
    <string name="input_what_u_want">请输入您想要搜索的内容</string>
    <string name="block_chain_app">来到链工具</string>
    <string name="backup_pk">备份私钥</string>
    <string name="create_or_import">创建/导入账户</string>
    <string name="create_account">创建账户</string>
    <string name="import_account">导入账户</string>
    <string name="create_account_success">账户创建成功</string>
    <string name="create_account_success_warning">请您在使用前备份账户私钥，一旦丢失不可找回！</string>
    <string name="check_account">查看账户详情</string>
    <string name="pk_format_error">私钥格式不正确！</string>
    <string name="copy_success">复制成功</string>
    <string name="address_list">地址列表</string>
    <string name="address_manager">地址管理</string>
    <string name="current_address_list">您当前的地址列表</string>
    <string name="laidao_social">来到社区</string>
    <string name="choose_city">选择城市</string>
    <string name="address_search">地址搜索</string>
    <string name="address_choose">地址选择</string>
    <string name="bind_new_phone">绑定新手机</string>
    <string name="search">搜索</string>
    <string name="account_name">账户名称：</string>
    <string name="account_name_hint">输入小写字母和1~5位数字组合字符</string>
    <string name="account_pk">账户私钥：</string>
    <string name="phone_num">手机号：</string>
    <string name="captcha">验证码：</string>
    <string name="obtain_captcha">获取验证码</string>
    <string name="captcha_error">验证码不正确！</string>
    <string name="record_account">积分账户</string>
    <string name="manager_account">管理账户</string>
    <string name="record_score">积分收发记录</string>
    <string name="already_sign_up">已签到</string>
    <string name="scan">扫一扫</string>
    <string name="unlock">解锁</string>
    <string name="copy_pk">复制私钥</string>
    <string name="system_rewards">系统奖励</string>
    <string name="no_score">暂无积分记录</string>
    <string name="my_activity_record">我的活动记录</string>
    <string name="score_exchange">积分兑换</string>
    <string name="score_mission">积分任务</string>
    <string name="score_account">积分账户</string>
    <string name="account_info">账户信息</string>
    <string name="get_record_success">积分领取成功</string>
    <string name="account_detail">账户信息</string>
    <string name="transaction_detail">交易信息</string>
    <string name="block_info">区块信息</string>
    <string name="searching">查询中</string>
    <string name="main_net_preview">主网一览</string>
    <string name="block_height">区块高度</string>
    <string name="account_num">账户数</string>
    <string name="transaction">交易</string>
    <string name="score_category">积分种类</string>
    <string name="account">账户</string>
    <string name="transfer_content">交易内容</string>
    <string name="save_success">保存成功</string>
    <string name="vote_statistic">投票统计</string>
    <string name="edit">编辑</string>
    <string name="vote_detail">投票详情</string>
    <string name="release">发布</string>
    <string name="create_vote_success">创建投票成功</string>
    <string name="create_vote">创建投票</string>
    <string name="mine_account">我的区块链账户</string>
    <string name="create_account_first">请先创建账户</string>
    <string name="back">返回</string>
    <string name="update_vote_success">更新投票成功</string>
    <string name="update_vote">更新投票</string>
    <string name="commdodity_manager">商品管理</string>
</resources>
