<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/i_music"
        android:checked="true"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/main_deal_order" />

    <item
        android:id="@+id/i_backup"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/main_circle" />

    <item
        android:id="@+id/i_friends"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/main_wallet" />
    <item
        android:id="@+id/i_favor"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/message" />
    <item
        android:id="@+id/i_favor2"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/store" />
</menu>