<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
<ImageView
    android:layout_width="60dp"
    android:layout_height="60dp"
    android:background="@mipmap/icon_success"
    android:layout_marginTop="100dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/create_account_success"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:textColor="@color/main_red"
        android:text="@string/create_account_success_warning"
        />
    <Button
        android:id="@+id/btn_backup"
        style="@style/button_style"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/backup_pk"
        android:layout_marginTop="8dp"
        />
    <Button
        android:id="@+id/btn_check"
        style="@style/button_style"
        android:background="@drawable/common_night_blue_border"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/check_account"
        android:textColor="@color/common_night_blue"
        android:layout_marginTop="40dp"
        />

</LinearLayout>