<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/split_area" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/account_name" />

            <EditText
                android:id="@+id/et_account_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:maxLines="1"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/account_name_hint"
                android:maxLength="12"
                android:textSize="@dimen/dimens_12sp" />

            <Button
                android:id="@+id/btn_random"
                style="@style/blue_border_button"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:text="随机" />
        </LinearLayout>

        <include layout="@layout/split_line_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/phone_num" />

            <EditText
                android:background="@null"
                android:id="@+id/tv_phone_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:layout_marginStart="5dp"
                android:textSize="@dimen/dimens_14sp" />
        </LinearLayout>

        <include layout="@layout/split_line_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/captcha" />

            <EditText
                android:id="@+id/et_input_captcha"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:background="@null"
                android:hint="@string/input_captcha"
                android:inputType="number"
                android:textSize="@dimen/dimens_12sp" />

            <Button
                android:id="@+id/btn_obtain_captcha"
                style="@style/blue_border_button"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:text="@string/obtain_captcha" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_captcha_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/captcha_error"
        android:textColor="@color/main_red"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_create_1"
        style="@style/button_style"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:text="@string/create_account" />


</LinearLayout>