<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_height"
        android:gravity="center"
        android:text="分享到"
        android:textSize="@dimen/dimens_16sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_margin"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/share_board_wx"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/share_wechat"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/wx" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/share_board_moment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/share_moment"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/pyq" />
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/split_line" />
    <TextView
        android:id="@+id/share_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_height"
        android:gravity="center"
        android:text="@string/cancel" />
</LinearLayout>