<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/login_phone"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_height"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="6dp"
                android:hint="@string/edit_phone"
                android:inputType="phone"
                android:paddingStart="6dp"
                android:textSize="@dimen/dimens_14sp" />

            <include
                android:id="@+id/login_send_verify"
                layout="@layout/send_verify"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

        <include layout="@layout/split_line" />

        <EditText
            android:id="@+id/login_verify"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:background="@null"
            android:drawablePadding="6dp"
            android:hint="@string/edit_verify"
            android:inputType="number"
            android:paddingStart="6dp"
            android:textSize="@dimen/dimens_14sp" />

    </LinearLayout>

    <include layout="@layout/shadow_line" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_selector"
        android:text="@string/login_now"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:textColor="#fff"
        android:textSize="@dimen/dimens_16sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="没注册过的手机号将自动注册为无忧用户"
        android:textSize="@dimen/dimens_16sp" />

</LinearLayout>