<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_launcher"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/login_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:drawablePadding="6dp"
            android:hint="@string/edit_phone"
            android:inputType="phone"
            android:paddingStart="6dp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="@dimen/dimens_14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_verify"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:layout_marginTop="20dp"
                android:drawablePadding="6dp"
                android:hint="@string/edit_verify"
                android:inputType="number"
                android:paddingStart="6dp"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="@dimen/dimens_14sp" />

            <include
                android:id="@+id/login_send_verify"
                layout="@layout/send_verify"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_alignEnd="@+id/login_verify"
                android:layout_alignTop="@+id/login_verify"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp" />
        </RelativeLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_selector"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="@dimen/dimens_16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="注册即视为同意"
                android:textColor="#c0c0c1"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/login_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="无游链注册协议"
                android:textSize="@dimen/dimens_16sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="其他方式登陆"
        android:textColor="#fff"
        android:textSize="@dimen/dimens_16sp" />

    <ImageView
        android:id="@+id/wx_login"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />


</RelativeLayout>